# naive-sha256

./: Cargo.toml  README.md
benches/: bench.rs
examples/: readme.rs  sha256sum.rs
src/: lib.rs
