[package]
name = "naive-sha256"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "sha256sum"
required-features = ["clap", "hex"]

[[example]]
name = "readme"
required-features = ["hex"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.3"
hex = "0.4"
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"
sha2 = { version = "0.10", features = ["force-soft"] }

